--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="images/IconZepyhr.png" alt="">
             </div>
             <div class="loginform">
-                <form id="LoginForm" method="post" action="survey.html">
+                <form id="LoginForm" method="get" action="survey.html">
                     <input type="text" name="Username" value="" class="form_input required" placeholder="username" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="password" />
                     <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
