--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                     <input type="text" name="Username" value="" class="form_input required" placeholder="username" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="password" />
                     <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
-                    <div class="login"><input type="submit" name="submit" class="form_submit" id="submit" value="Login" /></div>
+                    <!-- <div class="login"><input type="submit" name="submit" class="form_submit" id="submit" value="Login" /></div> -->
+                    <div class="login"><a href="SigIn.html" >SIGN UP</a></div>
+
                 </form>
                 <div class="forgot_bottom">
                     <p>Don't have an account?</p>
