--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
                 <img src="images/IconZepyhr.png" alt="">
             </div>
             <div class="loginform">
-                <form id="LoginForm" method="POST" action="survey.html">
+                <form id="LoginForm" method="get" action="survey.html">
                     <input type="text" name="Username" value="" class="form_input required" placeholder="username" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="password" />
                     <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
                     <!-- <div class="login"><input type="submit" name="submit" class="form_submit" id="submit" value="Login" /></div> -->
-                    <div class="login"><a href="SigIn.html" >SIGN UP</a></div>
-
                 </form>
+                <div class="login"><a href="survey.html" >Login</a></div>
                 <div class="forgot_bottom">
                     <p>Don't have an account?</p>
                     <a href="SigIn.html" >SIGN UP</a>
