--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
                     <!-- <div class="login"><input type="submit" name="submit" class="form_submit" id="submit" value="Login" /></div> -->
                 </form>
-                <div class="login"><a href="survey.html" >Login</a></div>
+                <div class="login"><a href="survey.html" class="form_submit">Login</a></div>
                 <div class="forgot_bottom">
                     <p>Don't have an account?</p>
                     <a href="SigIn.html" >SIGN UP</a>
