--- a/SigIn.html
+++ b/SigIn.html
@@ -17,7 +17,7 @@
     <div >
         <div class="content-block">
             <div class="arrow-back">
-                <a href="login.html"><img src="images/arrow_back_24px.png" alt=""></a>
+                <a href="index.html"><img src="images/arrow_back_24px.png" alt=""></a>
             </div>
             <h4>REGISTER</h4>
             <div class="loginform">
