--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                     <input type="password" name="Password" value="" class="form_input required" placeholder="password" />
                     <div class="forgot_pass"><a href="#" data-popup=".popup-forgot" class="open-popup">Forgot Password?</a></div>
                     <!-- <div class="login"><input type="submit" name="submit" class="form_submit" id="submit" value="Login" /></div> -->
-                <div class="login"><a href="survey.html" class="form_submit">Login</a></div>
-
                 </form>
+                <div class="login"><a href="survey.html"><button>Login</button></a></div>
                 <div class="forgot_bottom">
                     <p>Don't have an account?</p>
                     <a href="SigIn.html" >SIGN UP</a>
