--- a/data.html
+++ b/data.html
@@ -26,6 +26,7 @@
                 </div>
             </div>
             <div class="pages-box">
+                <a href="German VDI Method data.html">
                     <div class="boxs">
                         <img src="images/icons/blue/box-dataV2.png" alt="">
                         <div class="title-box">
@@ -35,102 +36,40 @@
                             <p>Sunday,20 Nov 2023</p>
                         </div>
                     </div>
+                </a>
+                <a href="VIC EPA Area Method data.html">
                     <div class="boxs">
                         <img src="images/icons/blue/box-dataV2.png" alt="">
                         <div class="title-box">
-                            <span>German VDI Method</span>
+                            <span>VIC EPA Area Method</span>
                         </div>
                         <div class="date-box">
                             <p>Sunday,20 Nov 2023</p>
                         </div>
                     </div>
+                </a>   
+                <a href="VIC EPA Line Method data.html">
                     <div class="boxs">
                         <img src="images/icons/blue/box-dataV2.png" alt="">
                         <div class="title-box">
-                            <span>German VDI Method</span>
+                            <span>VIC EPA Line Method</span>
                         </div>
                         <div class="date-box">
                             <p>Sunday,20 Nov 2023</p>
                         </div>
-                    </div>  <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>German VDI Method</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Sunday,20 Nov 2023</p>
-                        </div>
-                    </div> <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>German VDI Method</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Sunday,20 Nov 2023</p>
-                        </div>
-                    </div> <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>VIC EPA Plume Tracing</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Monday,29 Nov 2023</p>
-                        </div>
-                    </div>
+                    </div> 
+                </a>    
+                <a href="VIC EPA Plume Tracing data.html">
                     <div class="boxs">
                         <img src="images/icons/blue/box-dataV2.png" alt="">
                         <div class="title-box">
                             <span>VIC EPA Plume Tracing</span>
                         </div>
                         <div class="date-box">
-                            <p>Monday,29 Nov 2023</p>
-                        </div>
-                    </div>
-                    <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>VIC EPA Plume Tracing</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Monday,29 Nov 2023</p>
-                        </div>
-                    </div>
-                    <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>VIC EPA Plume Tracing</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Monday,29 Nov 2023</p>
-                        </div>
-                    </div>
-                    <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>VIC EPA Plume Tracing</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Monday,29 Nov 2023</p>
-                        </div>
-                    </div>
-                    <div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>German VDI Method</span>
-                        </div>
-                        <div class="date-box">
                             <p>Sunday,20 Nov 2023</p>
                         </div>
-                    </div><div class="boxs">
-                        <img src="images/icons/blue/box-dataV2.png" alt="">
-                        <div class="title-box">
-                            <span>German VDI Method</span>
-                        </div>
-                        <div class="date-box">
-                            <p>Sunday,20 Nov 2023</p>
-                        </div>
-                    </div>
-                    
+                    </div>  
+                </a>    
             </div>
         </div>
 			  
