--- a/data.html
+++ b/data.html
@@ -18,7 +18,7 @@
             <!-- <div> <img src="images/arrow_back_24px.png" alt=""></div> -->
             <div class="header-survey">
                 <!-- <img src="images/icons/blue/surveyL.png" alt=""> -->
-                <h3>Previous Survey Data</h3>
+                <span>Previous Survey Data</span>
             </div>
             <div class="pages-content">
                 <div class="search-container">
