--- a/settings.html
+++ b/settings.html
@@ -16,7 +16,7 @@
 
         <div class="content-block">
             <div class="settings">
-              <h3>Settings</h3>
+              <span>Settings</span>
               <div class="menu-settings">
                   <div class="item-settings">
                     <img src="images/icons/blue/manage-account.png" class="logo-menu" alt="">
