--- a/VIC-EPA-Line-Method.html
+++ b/VIC-EPA-Line-Method.html
@@ -15,7 +15,7 @@
 <body id="mobile_wrap">
 
         <div class="content-block">
-            <a href="form-survey.html"><img src="images/arrow_back_24px.png" alt=""></a>
+            <!-- <a href="form-survey.html"><img src="images/arrow_back_24px.png" alt=""></a> -->
                 <div id="timer" class="timer">10:00</div>
                 <div class="select-list">
 
