--- a/data.html
+++ b/data.html
@@ -14,18 +14,75 @@
 </head>
 <body id="mobile_wrap">
 
-        <div class="content-block">
             <!-- <div> <img src="images/arrow_back_24px.png" alt=""></div> -->
-            <div class="header-survey">
-                <!-- <img src="images/icons/blue/surveyL.png" alt=""> -->
-                <span>Previous Survey Data</span>
-            </div>
-            <div class="pages-content">
+            <div class="data-page">
+                <div class="header-survey" >
+                    <!-- <img src="images/icons/blue/surveyL.png" alt=""> -->
+                    <div class="search">
+                        <a href=""><img src="images/icons/white/icons8-search-32.png" alt=""></a>
+                    </div>
+                    <div class="title-header">
+                        <span>Previous <br> Survey Data</span>
+                    </div>
+                </div>
+
+                <div class="data-survey">
+                    <div class="title-data">
+                        <span>Name</span>
+                    </div>
+                <a href="German VDI Method data.html">
+                    <div class="boxs">
+                            <img src="images/icons/blue/folder-32.png" alt="">
+                        <div class="name-data-survey">
+                            <span>German VDI Method</span>
+                            <div class="date-box">
+                                <p>Sunday,20 Nov 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="VIC EPA Area Method data.html">
+                    <div class="boxs">
+                            <img src="images/icons/blue/folder-32.png" alt="">
+                        <div class="name-data-survey">
+                            <span>VIC EPA Area Method</span>
+                            <div class="date-box">
+                                <p>Sunday,20 Nov 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="VIC EPA Line Method data.html">
+                    <div class="boxs">
+                            <img src="images/icons/blue/folder-32.png" alt="">
+                        <div class="name-data-survey">
+                            <span>VIC EPA Line Method</span>
+                            <div class="date-box">
+                                <p>Sunday,20 Nov 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="VIC EPA Plume Tracing data.html">
+                    <div class="boxs">
+                            <img src="images/icons/blue/folder-32.png" alt="">
+                        <div class="name-data-survey">
+                            <span>VIC EPA Plume Tracing</span>
+                            <div class="date-box">
+                                <p>Sunday,20 Nov 2023</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                </div>
+            <!-- <div class="pages-content">
                 <div class="search-container">
                     <input type="text" class="search-input" placeholder="Cari...">
                 </div>
-            </div>
-            <div class="pages-box">
+            </div> -->
+
+            <!-- <div class="pages-box">
                 <a href="German VDI Method data.html">
                     <div class="boxs">
                         <img src="images/icons/blue/box-dataV2.png" alt="">
@@ -70,8 +127,10 @@
                         </div>
                     </div>  
                 </a>    
-            </div>
+            </div> -->
         </div>
+
+        
 			  
         <div class="swiper-container-toolbar swiper-toolbar">
 			<div class="swiper-pagination-toolbar"></div>
