--- a/Summary Screen.html
+++ b/Summary Screen.html
@@ -13,12 +13,14 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,900" rel="stylesheet"> 
 </head>
 <body id="mobile_wrap">
-
+  <div class="maps-summary">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193578.74109041138!2d-73.97968099999997!3d40.70331274999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York+NYC%2C+New+York%2C+Statele+Unite+ale+Americii!5e0!3m2!1sro!2s!4v1425027721891" width="100%" height="200" frameborder="0" style="border:0"></iframe> 
+</div>
         <div class="content-block">
-            <a href="form-survey.html"><img src="images/arrow_back_24px.png" alt=""></a>
-            <div class="maps-summary">
+            <!-- <a href="form-survey.html"><img src="images/arrow_back_24px.png" alt=""></a> -->
+            <!-- <div class="maps-summary">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193578.74109041138!2d-73.97968099999997!3d40.70331274999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York+NYC%2C+New+York%2C+Statele+Unite+ale+Americii!5e0!3m2!1sro!2s!4v1425027721891" width="100%" height="200" frameborder="0" style="border:0"></iframe> 
-            </div>
+            </div> -->
             <div class="table-summary">
                 <table>
                     <thead>
