--- a/SigIn.html
+++ b/SigIn.html
@@ -26,7 +26,8 @@
                     <input type="text" name="Email" value="" class="form_input required" placeholder="Email Address" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="Password" />
                     <input type="password" name="Password" value="" class="form_input required" placeholder="Repeat Password" />
-                    <input type="submit" name="submit" class="form_submit" id="submitregister" value="SIGN UP" />
+                    <!-- <input type="submit" name="submit" class="form_submit" id="submitregister" value="SIGN UP" /> -->
+                    <div class="login"><a id="submitforgot"><button>Login</button></a></div>
                 </form>
 		<h5>- OR REGISTER WITH A SOCIAL ACCOUNT -</h5>
 		<div class="signup_social">
