--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <div class="panel-overlay"></div>
    
-    <div class="img_screen" id="loading-container">
+    <!-- <div class="img_screen" id="loading-container">
         <img src="images/IconZepyhr.png" alt="">
-    </div>
+    </div> -->
     
     <!-- Login Popup -->
     <div class="" id="login-form">
@@ -50,7 +50,9 @@
             <div class="loginform">
                 <form id="ForgotForm" method="post">
                     <input type="text" name="Email" value="" class="form_input required" placeholder="email" />
-                    <input type="submit" name="submit" class="form_submit" id="submitforgot" value="RESEND PASSWORD" />
+                    <!-- <input type="submit" name="submit" class="login" id="submitforgot" value="RESEND PASSWORD" /> -->
+                    <div class="login"><a id="submitforgot"><button>Login</button></a></div>
+                
                 </form>
                 <div class="signup_bottom">
                     <p>Check your email and follow the instructions to reset your password.</p>
