--- a/success.html
+++ b/success.html
@@ -14,6 +14,7 @@
 </head>
 <body id="mobile_wrap">
 
+        <div class="content-block">
           <div class="success">
 
           <div class="success-checkmark">
@@ -36,6 +37,7 @@
             </div>
         </div>
 
+        </div>
 			  
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/jquery.validate.min.js" ></script>
